Bug 344409 - User is asked to create a new category in splits table if change is aborted
Summary: User is asked to create a new category in splits table if change is aborted
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources All
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2015-02-20 21:43 UTC by Christian David
Modified: 2018-10-06 16:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3, 5.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian David 2015-02-20 21:43:34 UTC
The "The category […] currently does not exist. Do you want to create it?" is shown even if this is not necessary. 

Reproducible: Always

Steps to Reproduce:
1. Open splits dialog
2. Enter something in the category column which is not an existing category
3. Hit ESC or the abort button

Actual Results:  
Message box "The category […] currently does not exist. Do you want to create it?" is shown.

Expected Results:  
Nothing should happen. If the user aborted the process, creating a new category is not what he wants.
Comment 1 Cristian Oneț 2015-04-06 08:06:50 UTC
Your right nothing should happen when cancelling, I also saw this a couple of times myself.
Comment 2 Ralf Habacker 2018-06-01 06:20:13 UTC
Git commit 71c5d41b39fab3cfa5febbef796a32f55299bac7 by Ralf Habacker.
Committed on 01/06/2018 at 06:19.
Pushed by habacker into branch '4.8'.

Fix 'User is asked to create a new category in splits table if change is aborted'
FIXED-IN:4.8.3

M  +7    -0    kmymoney/dialogs/kmymoneysplittable.cpp

https://commits.kde.org/kmymoney/71c5d41b39fab3cfa5febbef796a32f55299bac7
Comment 3 Thomas Baumgart 2018-06-02 08:28:26 UTC
Git commit 216b3ad7d0e49df4e7cc2cd1b040f4cfb140777a by Thomas Baumgart.
Committed on 02/06/2018 at 08:28.
Pushed by tbaumgart into branch 'master'.

Fix 'User is asked to create a new category in splits table if change is aborted'

(cherry picked from commit 71c5d41b39fab3cfa5febbef796a32f55299bac7 and
adjusted to match on master)

M  +8    -0    kmymoney/dialogs/kmymoneysplittable.cpp

https://commits.kde.org/kmymoney/216b3ad7d0e49df4e7cc2cd1b040f4cfb140777a