Fix 'User is asked to create a new category in splits table if change is aborted'

BUG:344409
FIXED-IN:4.8.3